--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -234,6 +234,11 @@
 	text-align:left !important;
 }
 
+.ddl-select
+{
+	display:none;
+}
+
 }
 @media (min-width:768px) and (max-width:991px) {
  .nav > li > a {
@@ -405,7 +410,7 @@ display:none!important
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 }
-.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+.navbar-nav > li > a:hover {
 	background-color: transparent !important;
 	color: #ffffff !important;
 }
