--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -239,6 +239,10 @@
 	display:none;
 }
 
+.approve-img .form-btn {
+  font-size: 16px;
+}
+
 }
 @media (min-width:768px) and (max-width:991px) {
  .nav > li > a {
