--- a/themes/koocam/css/custom.css
+++ b/themes/koocam/css/custom.css
@@ -89,3 +89,7 @@ label{
 .fc-unthemed .fc-popover .fc-header .fc-close {
   color:#ffffff !important;
 }
+
+a.view-comment, a.write-comment{
+    color: #FFF;
+}
