--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -304,9 +304,7 @@
 	margin-top:0px;
 }
 
-#inner-banner .site-feature {
-  font-size: 13px;
-}
+
 
 .course-details
 {
@@ -385,7 +383,9 @@ background-size:150%;
 min-height: 160px;
 }
 
-
+.site-feature{
+    font-size: 15px;
+}
 
 
 }
@@ -410,9 +410,7 @@ min-height: 160px;
  .letcame {
  width:100%;
 }
-#inner-banner .site-feature {
-  font-size: 14px;
-}
+
 
 .sharethis-share .custom-share {
   margin: 0 4px 0 0;
