--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -302,6 +302,11 @@
     display: inline-block;
 }
 
+.nav > li {
+  float: left;
+  width: 100%;
+}
+
 }
 @media (min-width:768px) and (max-width:991px) {
  .nav > li > a {
